--- a/css/sales1.css
+++ b/css/sales1.css
@@ -46,3 +46,14 @@ table {
     background-color: #4CAF50;
     color: white;
   }
+
+ form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+    color: darkblue;
+    
+  }
+
